--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^5.5.0",
+    "@types/classnames": "^2.3.1",
     "@types/react": "17.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
+    "classnames": "^2.3.1",
     "eslint": "^7.29.0",
     "eslint-config-next": "11.0.1",
     "stylelint": "^13.13.1",
