--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "stylelint": "stylelint \"**/*.css\" --fix"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.10",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
@@ -21,9 +23,12 @@
     "@types/react": "17.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
+    "babel-plugin-styled-components": "^1.13.1",
     "classnames": "^2.3.1",
+    "date-fns": "^2.22.1",
     "eslint": "^7.29.0",
     "eslint-config-next": "11.0.1",
+    "styled-components": "^5.3.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0",
