--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/styled-components": "^5.1.10",
     "next": "^11.0.1",
+    "next-translate": "^1.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "use-dark-mode": "^2.3.1"
