--- a/package.json
+++ b/package.json
@@ -11,17 +11,28 @@
     "stylelint": "stylelint \"**/*.css\" --fix"
   },
   "dependencies": {
+    "@types/react-motion": "0.0.32",
     "@types/styled-components": "^5.1.10",
+    "axios": "^0.24.0",
+    "formik": "^2.2.9",
+    "framer-motion": "^4.1.17",
+    "google-map-react": "^2.1.10",
+    "i": "^0.3.7",
     "next": "^11.0.1",
     "next-translate": "^1.0.7",
+    "npm": "^8.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "use-dark-mode": "^2.3.1"
+    "react-scroll": "^1.8.4",
+    "use-dark-mode": "^2.3.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
     "@types/classnames": "^2.3.1",
+    "@types/google-map-react": "^2.1.3",
     "@types/react": "17.0.11",
+    "@types/react-scroll": "^1.8.3",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "babel-plugin-styled-components": "^1.13.1",
