--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     ],
     "rules": {
         "semi": "off",
+        "no-mixed-spaces-and-tabs": 0,
         "@typescript-eslint/semi": [
             "warn"
         ],
