--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "stylelint": "stylelint \"**/*.css\" --fix"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "@types/react-motion": "0.0.32",
     "@types/styled-components": "^5.1.10",
     "axios": "^0.24.0",
@@ -23,6 +24,8 @@
     "npm": "^8.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-redux": "^7.2.8",
     "react-scroll": "^1.8.4",
     "use-dark-mode": "^2.3.1",
     "yup": "^0.32.11"
@@ -40,6 +43,7 @@
     "date-fns": "^2.22.1",
     "eslint": "^7.29.0",
     "eslint-config-next": "11.0.1",
+    "redux-logger": "^3.0.6",
     "styled-components": "^5.3.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
