--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
         "@typescript-eslint/semi": [
             "warn"
         ],
+        "@typescript-eslint/no-var-requires": 0,
         "@typescript-eslint/no-empty-interface": [
             "error",
             {
