--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_DOMAIN = "http://prydatko.site"
 NEXT_PUBLIC_GOOGLE_MAP_API_KEY = "AIzaSyCdisdBK2HVtByA5Hoqv9_pZldcDDizCQ4"
 SENDGRID_API_KEY= "SG.1xwNiZdDRRuvEGoXMhDAkg.ScysIc_TZxIxeqroRC5XpiOAUpf_9tQrl-DXMSlcvos4"
+NEXT_PUBLIC_GOOGLE_TAG_MANAGER = "GTM-5LF3L4L"
 
