--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "debug": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
-    "start": "next start -H 0.0.0.0 -p ${PORT:-8080}",
+    "start": "next start",
     "lint": "next lint",
     "stylelint": "stylelint \"**/*.css\" --fix"
   },
@@ -16,6 +16,7 @@
     "@types/react-motion": "0.0.32",
     "@types/styled-components": "^5.1.10",
     "axios": "^0.24.0",
+    "file-loader": "^6.2.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "google-map-react": "^2.1.10",
@@ -25,6 +26,7 @@
     "npm": "^8.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-gtm-module": "^2.0.11",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.8",
     "react-scroll": "^1.8.4",
@@ -51,5 +53,11 @@
     "stylelint-order": "^4.1.0",
     "stylelint-order-config-standard": "^0.1.3",
     "typescript": "4.3.4"
+  },
+  "engines": {
+    "npm": ">=8.7.0"
+  },
+  "overrides": {
+    "react": "$react"
   }
 }
