--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/classnames": "^2.3.1",
     "@types/google-map-react": "^2.1.3",
     "@types/react": "17.0.11",
+    "@types/react-gtm-module": "^2.0.1",
     "@types/react-scroll": "^1.8.3",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
